changes for assigmnet

--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
 
 
 
-    
-    Hello World
-   <h1>sixth</h1>
+    <!-- changes for assigment 4 -->
+   <h1>ALexis Canales H</h1>
+      <!-- ____ -->
+       
    <h2>lalarero tratalala</h2>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nisi inventore quidem praesentium nesciunt cupiditate odio sequi voluptatum molestiae tenetur alias, accusantium impedit saepe odit vero natus consequatur nam! Repellat, corporis.</p>
    </main>
