--- a/index.html
+++ b/index.html
@@ -19,10 +19,21 @@
     <main> 
 
 
-
-    <!-- changes for assigment 4 -->
+<!-- changes for assigment 4 -->
    <h1>Alexis Canales H</h1>
-      <!-- ____ -->
+
+      <!-- ____ on this lines .. the merge conflict should occurs, but they didnt-->
+    <p>Here is my favorite movie: 
+        <a href="https://example.com">Alex's favorite movie</a>.
+    <!-- </p> -----^^^^ ----->
+
+    <!-- my parntner codo move by me manually, tecnically is a solucion... but i don't know if it counts-->
+ <h1>Ka Zoua Vang</h1>
+        <p>Hello, my name is Ka Zoua Vang and I like to go fishing.</p>
+  <!-- ^^ parner code ^^ -->
+
+<h1>Jane Doe</h1>
+<p>Hello, my name is Jane Doe and I like to read.</p>
 
    <h2>lalarero tratalala</h2>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nisi inventore quidem praesentium nesciunt cupiditate odio sequi voluptatum molestiae tenetur alias, accusantium impedit saepe odit vero natus consequatur nam! Repellat, corporis.</p>
